force-app/main/default/objects/Requirement_Resource_Notification__c/Requirement_Resource_Notification__c.object-meta.xml
<CustomObject>
    <description>This junction custom object is used to keep track notifications of requirements assigned to different resources for Professional Service Delivery Requests only
Master- Detailed relationship to Resources and Practice</description>
    <label>Requirement Resource Notification</label>
    <nameField>
        <displayFormat>PSR-{0000}</displayFormat>
        <label>Requirement Resource Notification</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requirement Resource Notifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>