force-app/main/default/objects/Requirement_Resource_Notification__c/fields/Practice__c.field-meta.xml
<CustomField>
    <fullName>Practice__c</fullName>
    <businessOwnerGroup>Business_Systems_Internal</businessOwnerGroup>
    <description>This field shows the main practice for the resource</description>
    <inlineHelpText>Main Practice</inlineHelpText>
    <label>Practice</label>
    <referenceTo>pse__Practice__c</referenceTo>
    <relationshipLabel>Requirement Resource Notifications</relationshipLabel>
    <relationshipName>Requirement_Resource_Notifications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>