force-app/main/default/objects/Requirement_Resource_Notification__c/fields/Practice_Name__c.field-meta.xml
<CustomField>
    <fullName>Practice_Name__c</fullName>
    <businessOwnerGroup>Business_Systems_Internal</businessOwnerGroup>
    <description>This formula field is used in a Record -Triggered flow for Delivery Request Requirements</description>
    <formula>Practice__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Practice Name</label>
    <type>Text</type>
</CustomField>