force-app/main/default/objects/Requirement_Resource_Notification__c/fields/Requirement__c.field-meta.xml
<CustomField>
    <fullName>Requirement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requirement</label>
    <referenceTo>Requirement__c</referenceTo>
    <relationshipLabel>Requirement Resource Notifications</relationshipLabel>
    <relationshipName>Requirement_Resource_Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>