force-app/main/default/objects/Requirement_Resource_Notification__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <businessOwnerGroup>Business_Systems_Internal</businessOwnerGroup>
    <description>The resource assigned to the requirement notification</description>
    <label>Resource</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Requirement Resource Notifications</relationshipLabel>
    <relationshipName>Requirement_Resource_Notifications</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>