force-app/main/default/objects/Requirement_Resource_Notification__c/listViews/Active_Inactive.listView-meta.xml
<ListView>
    <fullName>Active_Inactive</fullName>
    <columns>Resource__c</columns>
    <columns>Practice__c</columns>
    <columns>Resource_Region__c</columns>
    <columns>Notification_Recipient__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Active/Inactive</label>
</ListView>